//denne kode skal deles efter øvelse


public class Main {

    public static void main(String[] args) {
        Game game = new Game(6);
        game.setup();
    }


}




